--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -30,10 +30,10 @@
 
         <td class="actions">
           <ul>
-            <li><% link_to 'Show', product %></li>
-            <li><% link_to 'Edit', edit_product_path(product) %></li>
+            <li><%= link_to 'Show', product %></li>
+            <li><%= link_to 'Edit', edit_product_path(product) %></li>
             <li>
-              <% link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
             </li>
           </ul>
         </td>
