--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,10 @@ header.main {
                     color: white;
                 }
             }
-
+            #date {
+                color: #bfb;
+                text-decoration: none;
+            }
         }
     }
     main {
