makes changes to box shadow

--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -27,7 +27,7 @@
                 padding: 1em;
                 margin-right: 1em;
                 margin-bottom: 1em;
-                box-shadow: 0.176em 0.176em 0.354em 0px rgba(0,0,0,0.75);
+                box-shadow: 0.176em 0.3em 0.354em 0px #003333;
             }
             .price {
                 font-size: 1.414em;
