--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,7 +60,7 @@
             }
             li {
                 margin: 0;
-                padding: 0;
+                padding: 0.5em;
                 text-transform: uppercase;
                 letter-spacing: 0.354em;
                 a {
