--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,7 @@
                 padding: 0.5em;
                 text-transform: uppercase;
                 letter-spacing: 0.354em;
+                color: #bfb;
                 a {
                     color: #bfb;
                     text-decoration: none;
