--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -10,6 +10,9 @@
                 <td class="quantity"><%= item.quantity %></td>
                 <td><%= item.product.title %></td>
                 <td class="price"><%= number_to_currency(item.total_price) %></td>
+                <td><%= button_to 'Remove from cart', item, 
+                        method: :delete,
+                        data: { confirm: 'Are you sure?' } %></td>    
             </tr>
         <% end %>
         <tfoot>
